css/styles.css
/* ... */
.bottom-nav-left,
.bottom-nav-right {
    display: flex;
    align-items: center;
    gap: 2px;
}

/* === Navigation Links === */

body.dark-mode nav a:visited {
    color: white;
}

.nav-left a.nav-link {
    text-decoration: none;
    color: inherit;
    transition: color 0.3s ease;
}

.nav-links a.nav-link {
    margin-right: 11px; /* Adjust as needed */
    opacity: 50%;
}

.nav-left a.nav-link:hover,
body.dark-mode .nav-left a.nav-link:hover {
    color: #007BFF;
}

.nav-left a.nav-link.active {
    border-bottom: 1px solid #007BFF;
    color: #007BFF;
    padding-top: 2px;
    opacity: 100%;
}

.title.nav-link.active,
.title.nav-link {
    font-weight: bold;
}

/* === Recent Log Styles === */

#recent-log-container {
    max-width: 500px;
}

#recent-log-text {
    opacity: 50%;
    padding-right: 10px;
}

#recent-log-time {
    font-size: 0.65em;
    white-space: nowrap;
}

.nav-right.top-nav-right {
    opacity: 50%;
    font-size: 0.5em;
    padding-top: 2px;
    font-weight: normal;
}

/* === Bluesky Stats Styling === */

#bluesky-stats {
    font-size: 0.9em;
    color: #000000;
    transition: color 0.3s ease;
}

@media (max-width: 450px) {
    #bluesky-stats {
        max-width: 250px;
    }
}

body.dark-mode #bluesky-stats {
    color: #fff;
}

body.dark-mode span.label {
    color: #ffffffa8;
}

span.label {
    opacity: 75%;
}

.stat {
    display: inline-flex;
    align-items: center;
    margin-right: 7px;
}

.count {
    font-weight: bold;
    margin-right: 5px;
}

/* Spinner styles */
.spinner {
    border: 2px solid #f3f3f3; /* Light gray */
    border-top: 2px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 12px;
    height: 12px;
    animation: spin 1s linear infinite;
    display: inline-block;
    margin-right: 5px;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

/* === Social Icon Styling === */

a.nav-icon {
    cursor: pointer;
    background: none;
    border: none;
    font-size: 1.5em; /* Increased size for better visibility */
    color: black;
    display: flex;
    align-items: center;
    transition: transform 0.3s ease, color 0.3s ease;
    border-radius: 0px;
    text-decoration: none;
    margin-right: 10px;
}

.nav-icon:hover {
    transform: scale(1.1);
    /* Optional: Change color on hover */
    color: #007BFF;
}

/* === Theme Toggle Styling === */

#theme-toggle {
    cursor: pointer;
    background: none;
    border: none;
    font-size: 1.5em; /* Increased size for better visibility */
    color: inherit; /* Inherit color from parent */
    display: flex;
    align-items: center;
    transition: transform 0.3s ease, color 0.3s ease;
    margin-right: 10px;
    border-radius: 3px;
    padding: 0px;
}

body.dark-mode #theme-toggle {
    color: #f1c40f;
}

#theme-toggle:hover {
    transform: scale(1.1);
    /* Optional: Change color on hover */
    color: #007BFF;
}

/* === Footer Styles === */

footer {
    bottom: 0;
    right: 0;
    text-align: center;
    background-color: #f0f0f0;
    padding: 10px 20px;
    font-size: 0.8em;
    border-bottom: 1px solid #ccc;
    border-top: 1px solid #ccc;
}

footer span {
    font-weight: bold;
}

/* === Post Styles === */

.post {
    border: 1px solid #ccc;
    padding: 15px 15px 5px 15px;
    margin: 5px 0px 10px 0px;
    border-radius: 5px;
    background-color: var(--post-background-color);
}

.post-date-header {
    margin-top: 40px;
}

#recent-posts {
    max-width: 350px;
    margin: auto;
    margin-bottom: 40px; /* So it doesn't clash with fixed footer */
}

body.dark-mode .post {
    border-color: #444;
}

.post-text-container p {
    font-size: 1.1em;
    margin-bottom: 10px;
    margin-top: 0px;
}

.post-image {
    max-width: 100%;
    height: auto;
    margin: 0px 0px 10px 0;
    border-radius: 5px;
    border: 1px solid #ccc;
}

body.dark-mode .post-image {
    border: 1px solid #444;
}

.post-date {
    font-size: 0.9em;
    color: #666;
    margin-bottom: 10px;
}

body.dark-mode .post-date {
    color: #aaa;
}

.embedded-quote {
    border-left: 4px solid #ccc;
    padding-left: 10px;
    margin: 10px 0;
    background-color: #e9e9e9;
    font-style: italic;
    position: relative;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 5px;
    color: #6b6b6b;
    padding-right: 12px;
}

body.dark-mode .embedded-quote {
    border-left: 4px solid #9a9a9a;
    background-color: #4c4c4c;
    color: #cfcfcf;
}

/* === Post Counts Styling === */

.post-counts {
    display: flex;
    margin-top: 10px; /* Space above counts */
    font-size: 0.9em; /* Adjust as needed */
}

.count-item {
    display: flex;
    align-items: center;
    font-size: 0.9em; /* Adjust size as needed */
    color: #555; /* Text color */
    background-color: #e0e0e0;
    padding: 3px 7px;
    border-radius: 3px;
    margin-right: 10px;
    margin-bottom: 10px;
    transition: color 0.3s ease, background-color 0.3s ease;
    font-weight: bold;
}

.count-item i {
    margin-right: 5px;
    color: #888; /* Default icon color */
    font-size: 1em; /* Ensure icons are appropriately sized */
    transition: color 0.3s ease; /* Moved transition here */
}

/* === Conditional Icon Styling === */

/* Default color for all icons when count is 0 */
/* Already defined above in .count-item i */

/* Active state: Count > 0 */
.count-item.active i.fa-heart {
    color: #e93434;
}

.count-item.active i.fa-retweet {
    color: #0dc70d;
}

.count-item.active i.fa-quote-right {
    color: #007BFF;
}

.count-item.active i.fa-reply {
    color: black;
}

/* Dark Mode Adjustments for Active Icons */
body.dark-mode .count-item.active i.fa-heart {
    color: #ff6b6b; /* Lighter shade for visibility */
}

body.dark-mode .count-item.active i.fa-retweet {
    color: #66ff66;
}

body.dark-mode .count-item.active i.fa-quote-right {
    color: #3399ff;
}

body.dark-mode .count-item.active i.fa-reply {
    color: #ffffff;
}
/* ... */

